--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "vercel-build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -20,8 +21,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.15",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "postcss": "^8.4.27",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
